--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -5,7 +5,7 @@
         <a href="../cadastro" class="signup">Cadastar-se</a>
         <p class="separador">|</p>
         <a href="#modal"><img src="/img/login.png" alt="Logar"></a>
-        <a href=""><img src="/img/carrinho.png" alt="Carrinho"></a>
+        <a href="/carrinhoDeCompra"><img src="/img/carrinho.png" alt="Carrinho"></a>
     </div>
 </nav>
 <div class="menu-bar">
