--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -56,7 +56,7 @@
                         <label for="email"></label>
                         <input type="email" id="email" name="email" placeholder="Email" required>
 
-                    <div class="caixa">
+                    <div class="caixa2">
                         <label for="dataDeNascimento"></label>
                         <input type="text" id="dataDeNascimento" name="dataDeNascimento" placeholder="Data de Nascimento">
 
