--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -4,7 +4,7 @@
         <p class="pt">Português(BR) - BRL</p>
         <a href="../cadastro" class="signup">Cadastar-se</a>
         <p class="separador">|</p>
-        <a href="#modal"><img src="/img/login.png" alt="Logar"></a>
+        <a href="#modal" class="btn-login"><img src="/img/login.png" alt="Logar"><%= usuario?.nome %></a>
         <a href="/carrinhoDeCompra"><img src="/img/carrinho.png" alt="Carrinho"></a>
     </div>
 </nav>
