--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,7 @@ header {
 
 nav {
     width: 100%;
-    height: 8vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -56,6 +56,7 @@ nav {
     display: flex;
     align-items: center;
     margin-right: 9%;
+    max-height: 80px;
 }
 
 .nav-options a.btn-login {
@@ -68,7 +69,7 @@ nav {
 .signup{
     background-color: #35c910;
     margin-right: 5px;
-    padding: 2px 0.5vw;
+    padding: 2px 0.5em;
     color: black;
     font-size: 1.6vh;
     text-decoration: none;
@@ -306,7 +307,7 @@ footer div.container1 {
 .footer-enviar{
     height: 4vh;
     width: 4vw;
-    min-width: 29px;
+    min-width: 40px;
     background-color: #35C910;
     border: none;
     border-radius: 4px;
@@ -330,6 +331,7 @@ footer div.container2 {
 footer div.footer-info {
     margin-right: 9%;
     display: flex;
+    min-width: 280px;
 }
 
 footer .institucional {
@@ -338,7 +340,7 @@ footer .institucional {
 
 footer div.footer-info ul {
     list-style: none;
-    font-size: 2vmin;
+    font-size: 1em;
     color: white;
 }
 
@@ -357,8 +359,32 @@ footer a {
 }
 
 /*********** media ***********/
-@media (width: 530px) {
+@media (max-width: 530px) {
+    header {
+        border-bottom: 1px solid #35C910;
+    }
+
+    header nav {
+        flex-direction: column;
+    }
+
     footer img.logo-footer {
-        width: 8rem;
+        width: 200px;
+        margin: 0;
+    }
+
+    header div.menu-bar {
+        display: none;
+    }
+
+    footer div.container2 {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 600px) {
+    footer div.footer-info ul {
+        font-size: 13px;
     }
 }
