--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -103,7 +103,7 @@
 
 .categories h2 {
     color: #fff;
-    font-size: 1.7em;
+    font-size: 2.8vh;
 }
 
 .categories h2, p {
@@ -111,7 +111,6 @@
 }
 
 .container1, .container2 {
-    max-width: 100vw;
     display: flex;
     justify-content: center;
     margin-top: 5vh;
@@ -120,6 +119,7 @@
 .card {
     position: relative;
     width: 28vw;
+    min-width: 200px;
     height: 35vh;
     background: #000;
     border-radius: 15px;
@@ -208,7 +208,7 @@
 /*********** Carrossel de produtos ***********/
 .carrossel-filmes h2 {
     color: #fff;
-    font-size: 1.7em;
+    font-size: 2.8vh;
     text-align: center;
 }
 
@@ -243,7 +243,7 @@
 /*********** Video ***********/
 .video h2 {
     color: white;
-    font-size: 1.7em;
+    font-size: 2.8vh;
 }
 
 section.video {
@@ -262,7 +262,7 @@ section.video {
 /*********** Midias sociais ***********/
 .midias-sociais h2 {
     color: white;
-    font-size: 1.7em;
+    font-size: 2.8vh;
 }
 
 section.midias-sociais {
@@ -294,8 +294,22 @@ section.midias-sociais a:hover {
 
 /*********** media ***********/
 @media (max-width: 530px) {
-    .card .face.face2 {
-        height: 5vh;
+    main div.container1, main div.container2 {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+    }
+
+    main .card, main div.container2{
+        margin-top: 2vh;
+    }
+
+    .card:nth-child(1) {
+        margin: 0;
+    }
+
+    main .face2 {
+        height: 6vh;
     }
 }
 
