--- a/views/cadastroProduto.ejs
+++ b/views/cadastroProduto.ejs
@@ -16,6 +16,17 @@
     <main>
         <h1>Cadastrar Produto</h1>
         <form action="/cadastrar-produto" method="POST">
+            <select id="id_categoria" name="id_categoria">
+                <option value="" disabled selected>Escolha uma categoria</option>
+                <option value="1">PC's Gamers - Gold</option>
+                <option value="2">PC's Gamers - Silver</option>
+                <option value="3">PC's Gamers - Bronze</option>
+                <option value="4">Novidades</option>
+                <option value="5">Mais comprados</option>
+                <option value="6">Acessórios</option>
+                <option value="7">Economicos</option>
+            </select>
+
             <input type="file" name="foto" id="foto">
 
             <div class="form-group">
