adicionando funcionalidade de redirecionamento para rota de pagamento e finalizamento da pagina

--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -38,6 +38,11 @@
                                         
                                     </div>
 
+                                    <div class="alinhar">
+
+                                        
+
+                                    </div>
                                     
                                     <div class="content">
 
@@ -62,30 +67,51 @@
 
                                 </div>
 
+                                
+
                                 </article>
 
                                 <div class="a">
-
-                                    <input min=2 type="number" name="total" id="total" >
+                                    <!--class='total' id='total'-->
+                                    <input  min=1 type="number" name="total" id="total" >
                                     <button class='menos' onclick="menos()"> - </button>
                                     <button class='mais' onclick="mais()"> + </button>
                                     <p>valor</p> 
                                     
                                 </div>
                                 
+                                
 
                             </li>          
                
                         </ul>
+
+                    <div class="concluir">
+
+                        <form action="">
+                            <div class="valor">
+
+                                <label for="valorTotal">Total:</label>
+                                <input type="number" name="valorTotal" id="valorTotal">
+                        
+                            </div>
+                            <button id='enviar' type="submit"> <a href="/checkout/pagamento">COMPRAR</a></button>
+                            <button id='resetar' type="reset">RESETAR</button>
+
+                        </form>
+                        
+
+                    </div>   
                         
                     </div>
 <!----------------------------------------------------------------------------------------------------------------------->
-                    <div class="finalizarCompra">
+                    <!--<div class="finalizarCompra">
                         <form action="" method="">
                             <h2>SIMULE SEU FRETE E PRAZO</h2>
-                            <input type="text"><button>SIMULAR</button>
+                            <input type="text"><button>COMPRAR</button>
                         </form>
-                    </div>
+                    </div>-->
+                    
 
                 </section>
 
