--- a/public/stylesheets/carrinhoDeCompra.css
+++ b/public/stylesheets/carrinhoDeCompra.css
@@ -30,7 +30,7 @@ h1{
     margin: 20px;
 }
 .produtoSelecionado {
-    height: 800px;
+    height: auto;
     width: 100%;
     background-color: var(--black2);
     margin-right: 15px;
@@ -51,15 +51,16 @@ li {
     list-style: none;
 }
 main img {
-    width: 5em;
-    height: 5em;
+    width: 12em;
+    max-width: 100%;
+    height: 13em;
 }
 main article {
     display: flex;
     width: 100%;
     height: auto;
     /*align-items: center;*/
-    padding: 2em 1em;
+    padding: 1em 1em;
 }
 .img {
     display: flex;
@@ -71,6 +72,9 @@ main article {
 }
 main .content{
     width: 20%;
+    max-width: 100%;
+    padding-left: 2%;
+    padding-top: 1%;
 }
 main .componentes{
     padding: 0;
@@ -85,18 +89,20 @@ main .produto{
 main .produto .a{
     display: flex;
     margin-left: 60%;
-    margin-bottom: 1em;
+    margin-bottom: -3em;
 }
 main .produto .a p{
     margin-left: 5em;
 }   
 main .close{
-    width: 60%;
+    width: 55%;
     text-align: right;
-    
+    padding-top: 1%;
 }
 main .a input{
-        width: 10%;
+        width: 5%;
+        border: 1px solid black;
+        text-align: center
 }
 main .a{
     align-items: center;
@@ -138,6 +144,10 @@ input[type="number"] {
       -webkit-box-sizing: content-box;
       box-sizing: content-box;
 }
+div .a {
+    position: relative;
+    bottom: 55px;   
+}
 .a button {
     height:20px;
     padding:1%;
@@ -151,8 +161,44 @@ input[type="number"] {
     cursor: pointer;   
 }
 button.menos{
-    border-right: 0px solid black;
+    border: 1px solid black;
+    background-color: #242424;
 }
 button.mais{
-    border-right: 1px solid black;
+    order: -1;
+    border: 1px solid black;
+    background-color: #242424;
 }
+
+form {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+.concluir form .valor{
+    display: flex;
+}
+.concluir form button#resetar{
+    order: -1;
+}
+.concluir form .valor input{
+    width: 30%;
+    max-width: 100%;
+}
+
+
+
+
+/*div .concluir{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 53%;
+    margin-right: 1%;
+    max-width: 100%;
+}*/
+/*@media (max-width: 1350px)  {
+    main .a input {
+        width: 6%;
+        max-width: 100%;
+    }
+}*/
