--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -321,6 +321,7 @@ footer img.logo-footer {
     margin-bottom: 3vh;
     height: 23vh;
     width: 21vw;
+    margin-right: 5%;
 }
 
 footer div.container2 {
@@ -329,6 +330,7 @@ footer div.container2 {
 }
 
 footer div.footer-info {
+    padding-top: 1%;
     margin-right: 9%;
     display: flex;
     min-width: 280px;
@@ -370,7 +372,7 @@ footer a {
 
     footer img.logo-footer {
         width: 200px;
-        margin: 0;
+        margin-top: 3%;
     }
 
     header div.menu-bar {
@@ -380,11 +382,17 @@ footer a {
     footer div.container2 {
         flex-direction: column;
         align-items: center;
+        max-width: 100%;
+    }
+
+    footer div.footer-info {
+        padding-left: 1%
     }
 }
 
 @media (max-width: 600px) {
     footer div.footer-info ul {
         font-size: 13px;
+        padding-left: 20%
     }
 }
