acabamento da pagina de carrinhos

--- a/public/stylesheets/carrinhoDeCompra.css
+++ b/public/stylesheets/carrinhoDeCompra.css
@@ -160,6 +160,10 @@ div .a {
     outline:none;
     cursor: pointer;   
 }
+article .close button#redirect {
+    background-color: red;
+    border: none;
+}
 button.menos{
     border: 1px solid black;
     background-color: #242424;
@@ -179,13 +183,21 @@ form {
     display: flex;
 }
 .concluir form button#resetar{
+    background-color: var(--orange);
+    border: none;
     order: -1;
 }
 .concluir form .valor input{
     width: 30%;
     max-width: 100%;
 }
-
+.concluir form button#enviar{
+    background-color: var(--green);
+    border: none;
+}
+.concluir form button#enviar a{
+    text-decoration: none;
+}
 
 
 
