--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -61,8 +61,8 @@
 
                                 <div class="close">
 
-                                    <button class="redirect">
-                                        x   
+                                    <button id="redirect">
+                                        <ion-icon name="trash-outline"></ion-icon>   
                                     </button>
 
                                 </div>
@@ -74,8 +74,8 @@
                                 <div class="a">
                                     <!--class='total' id='total'-->
                                     <input  min=1 type="number" name="total" id="total" >
-                                    <button class='menos' onclick="menos()"> - </button>
-                                    <button class='mais' onclick="mais()"> + </button>
+                                    <button class='menos' onclick="menos()"> <ion-icon name="remove-outline"></ion-icon> </button>
+                                    <button class='mais' onclick="mais()"> <ion-icon name="add-outline"></ion-icon> </button>
                                     <p>valor</p> 
                                     
                                 </div>
@@ -128,4 +128,7 @@
 
         <footer><%- include("./includes/footer") %></footer>
     </body> 
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
           </html>   
