--- a/views/pagamento.ejs
+++ b/views/pagamento.ejs
@@ -27,7 +27,7 @@
             <div class="accordion">
                 <label class="form-control">
                     <input type="radio" name="radio" />
-                    <i class="fas fa-barcode"></i>Boleto bancário <small class="valorAcc">(R$ 2.316,15)</small>
+                    <i class="fas fa-barcode"></i>Boleto bancário
                 </label>
             </div>
                 <div class="panel" id="painel-boleto">
@@ -52,7 +52,7 @@
             <div class="accordion">
                 <label class="form-control">
                     <input type="radio" name="radio" />
-                    <i class="fas fa-credit-card"></i>Cartão de crédito <small class="valorAcc">(R$ 2.656,65)</small>
+                    <i class="fas fa-credit-card"></i>Cartão de crédito
                 </label>   
             </div>
                 <div class="panel" id="painel-cartao">
@@ -114,8 +114,16 @@
 
             <!--Valor total-->
             <div class="container">
-                <p>Produto <small class="valor1">R$ 2.583,17</small></p>
-                <p>Frete <small class="valor2">R$ 69,29</small></p>
+                <p>Produto: <small class="valor1">R$ 2.583,17</small></p>
+                <p>Frete: <small class="valor2">R$ 69,29</small></p>
+
+                <form action="">
+
+                    <button type="submit">Confirmar</button>
+                    
+                </form>
+
+                
             </div>
 
         </section>
