--- a/public/stylesheets/pagamento.css
+++ b/public/stylesheets/pagamento.css
@@ -38,6 +38,8 @@ h1 {
 
 .container {
     font-size: 2vh;
+    display: flex;
+    justify-content: space-around;
 }
 
 .form-control {
@@ -175,6 +177,16 @@ small.valor1 {
 
 small.valor2 {
     margin-left: 5vw;
+}
+
+.container form{
+    display: flex;
+}
+
+.container form button{
+    border: none;
+    border-radius: 5px;
+    background-color: var(--green);
 }
 
 @media (max-width: 640px) {
