--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -30,130 +30,66 @@
         
     <!--PC's Gamers - Gold-->
       <section id="pcs-gold">
-        <h2>Pc's Gamers - Gold</h2>
-
+            <h2>Pc's Gamers - Gold</h2>
             <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <article>
-                        <img src="/img/produtos/gabinete1.jpg" alt="" />
-                        <p>Processador Intel Core i3</p>
-                        <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
-                        <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
-                    
-                        <div class="btn-floatter">
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
-                            </button>
 
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
-                            </button>
+                <% produtos.forEach(produto => { %>
+                    <% if(produto.id_categoria === 1) { %>
 
+                        <div class="item">
+                            <article>
+                                <img src="/img/produtos/<%= produto.foto %>" alt="<%= produto.nome %>" />
+                                <p><%= produto.nome %></p>
+                                <p><i class="fas fa-barcode"></i> R$ <%= String(produto.valor).replace(".", ",") %> <small>no boleto</small></p>
+                                <p><i class="fas fa-credit-card"></i> R$ 3.208,00 <small>em até 12x no cartão</small></p>
+
+                                <div class="btn-floatter">
+                                    <button>
+                                        <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
+                                    </button>
+
+                                    <button>
+                                        <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
+                                    </button>
+                                </div>
+                            </article>
                         </div>
-                    </article>
-                </div>
 
-                <div class="item">
-                    <article>
-                        <img src="/img/produtos/gabinete2.jpg" alt="" />
-                        <p>Processador Intel Core i5</p>
-                        <p><i class="fas fa-barcode"></i> R$ 999,99 <small>no boleto</small></p>
-                        <p><i class="fas fa-credit-card"></i> R$ 1.369,51 <small>em até 12x no cartão</small></p>
-
-                        <div class="btn-floatter">
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
-                            </button>
-
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
-                            </button>
-
-                        </div>
-                    </article>
-                </div>
-
-                <div class="item">
-                    <article>
-                        <img src="/img/produtos/gabinete3.jpg" alt="" />
-                        <p>Processador Intel Core i7</p>
-                        <p><i class="fas fa-barcode"></i> R$ 2.431,61 <small>no boleto</small></p>
-                        <p><i class="fas fa-credit-card"></i> R$ 2.801,13 <small>em até 12x no cartão</small></p>
-
-                        <div class="btn-floatter">
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
-                            </button>
-
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
-                            </button>
-
-                        </div>
-                    </article>
-                </div>
-
-                <div class="item">
-                    <article>
-                        <img src="/img/produtos/gabinete4.jpg" alt="" />
-                        <p>Processador AMD Ryzen 3</p>
-                        <p><i class="fas fa-barcode"></i> R$ 949,90 <small>no boleto</small></p>
-                        <p><i class="fas fa-credit-card"></i> R$ 1.319,42 <small>em até 12x no cartão</small></p>
-
-                        <div class="btn-floatter">
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
-                            </button>
-
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
-                            </button>
-
-                        </div>
-                    </article>
-                </div>
-
-                <div class="item">
-                    <article>
-                        <img src="/img/produtos/gabinete5.jpg" alt="" />
-                        <p>Processador AMD Ryzen 5</p>
-                        <p><i class="fas fa-barcode"></i> R$ 1.300,00 <small>no boleto</small></p>
-                        <p><i class="fas fa-credit-card"></i> R$ 1.669,52 <small>em até 12x no cartão</small></p>
-
-                        <div class="btn-floatter">
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
-                            </button>
-
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
-                            </button>
-
-                        </div>
-                    </article>
-                </div>
-
-                <div class="item">
-                    <article>
-                        <img src="/img/produtos/gabinete2.jpg" alt="" />
-                        <p>Processador AMD Ryzen 7</p>
-                        <p><i class="fas fa-barcode"></i> R$ 2.838,98 <small>no boleto</small></p>
-                        <p><i class="fas fa-credit-card"></i> R$ 3.208,00 <small>em até 12x no cartão</small></p>
-
-                        <div class="btn-floatter">
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
-                            </button>
-
-                            <button>
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
-                            </button>
-
-                        </div>
-                    </article>
-                </div>
-
+                    <% }}) %>
+    
+            </div>
       </section>
+
+      <section id="pcs-bronze">
+        <h2>Pc's Gamers - Bronze</h2>
+        <div class="owl-carousel owl-theme">
+
+            <% produtos.forEach(produto => { %>
+                <% if(produto.id_categoria === 3) { %>
+
+                    <div class="item">
+                        <article>
+                            <img src="/img/produtos/<%= produto.foto %>" alt="<%= produto.nome %>" />
+                            <p><%= produto.nome %></p>
+                            <p><i class="fas fa-barcode"></i> R$ <%= String(produto.valor).replace(".", ",") %> <small>no boleto</small></p>
+                            <p><i class="fas fa-credit-card"></i> R$ 3.208,00 <small>em até 12x no cartão</small></p>
+
+                            <div class="btn-floatter">
+                                <button>
+                                    <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
+                                </button>
+
+                                <button>
+                                    <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg2dark.svg" alt="view">
+                                </button>
+                            </div>
+                        </article>
+                    </div>
+
+                <% }}) %>
+
+        </div>
+  </section>
 
     </main>
     <footer><%- include('./includes/footer')%></footer>
