--- a/views/monteSeuPc.ejs
+++ b/views/monteSeuPc.ejs
@@ -87,7 +87,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 2.838,98 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 3.208,00 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
             </div>
         </section>
@@ -103,7 +103,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -113,7 +113,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -123,7 +123,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
             </div>
         </section>
@@ -139,7 +139,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -149,7 +149,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -159,7 +159,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -169,7 +169,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -179,7 +179,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -189,7 +189,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
             </div>
         </section>
@@ -205,7 +205,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -215,7 +215,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -225,7 +225,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -235,7 +235,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -245,7 +245,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
                 <div class="item">
@@ -255,7 +255,7 @@
                         <p><i class="fas fa-barcode"></i> R$ 657,90 <small>no boleto</small></p>
                         <p><i class="fas fa-credit-card"></i> R$ 1.027,42 <small>em até 12x no cartão</small></p>
                     </article>
-                    <button class="btn-adc">Adicionar</button>
+                    <button class="btn-adc" data-id="">Adicionar</button>
                 </div>
 
             </div>
