--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -45,7 +45,7 @@
                                 <p><i class="fas fa-credit-card"></i> R$ 3.208,00 <small>em até 12x no cartão</small></p>
 
                                 <div class="btn-floatter">
-                                    <button>
+                                    <button data-id="<%= produto.id_produto %>" onclick="adicionarNoCarrinho(this)">
                                         <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
                                     </button>
 
@@ -54,7 +54,6 @@
                                     </button>
                                 </div>
                             </article>
-                            <button class="btn-adc" data-id="<% produto %>" onclick="adicionarNoCarrinho()">Adicionar</button>
                         </div>
 
                     <% }}) %>
@@ -77,7 +76,7 @@
                             <p><i class="fas fa-credit-card"></i> R$ 3.208,00 <small>em até 12x no cartão</small></p>
 
                             <div class="btn-floatter">
-                                <button>
+                                <button data-id="<%= produto.id_produto %>" onclick="adicionarNoCarrinho(this)">
                                     <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg1dark.svg" alt="add">
                                 </button>
 
@@ -86,8 +85,6 @@
                                 </button>
                             </div>
                         </article>
-                        <button class="btn-adc" data-id="<% produto %>"
-                             onclick="adicionarNoCarrinho(produto)">Adicionar</button>
                     </div>
 
                 <% }}) %>
