--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -22,16 +22,10 @@
           <a href="../sobre-nos">A SetupGamer</a>
         </li>
         <li>
-          <a href="../categorias#pcs-gold">Pc's gamers</a>
+          <a href="../categorias#pcs-gold">Pc's Gold</a>
         </li>
         <li>
-          <a href="#">WorkStation</a>
-        </li>
-        <li>
-          <a href="#">Pc's office</a>
-        </li>
-        <li>
-            <a href="#">Peças</a>
+          <a href="../categorias#pcs-bronze">Pc's Bronze</a>
         </li>
         <li>
             <a href="../monte-seu-pc">Monte seu pc</a>
