--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,7 @@
         <h2>Escolha o PC que mais combina com você</h2>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="/img/produtos/gabinete1.jpg" alt="" />
+            <img src="/img/produtos/07-silver.jpg" alt="" />
             <h3>Nome do kit</h3>
             <button>Ver detalhes</button>
           </div>
