--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -10,6 +10,7 @@
         
         <script defer src="/scripts/inputNumber.js" crossorigin="anonymous"></script>
         <script defer src="/scripts/adicionarCarrinho.js" ></script>
+        <script defer src="/scripts/storageSalvoCarrinho.js"></script>
     
         <!--<script defer src="https://kit.fontawesome.com/6837938f61.js" crossorigin="anonymous"></script>-->
     
@@ -26,10 +27,12 @@
                 
                 <section class="separarElementos">
 
-                    <div class="produtoSelecionado">
+                    <div class="produtoSelecionado">    
 
                         <ul>
                             
+                            
+
                         </ul>
 
                     <div class="concluir">
