--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -45,7 +45,9 @@
                         
                             </div>
                             <button id='enviar' type="submit"> <a href="/checkout/pagamento">COMPRAR</a></button>
-                            <button id='resetar' type="reset">RESETAR</button>
+
+                    
+                            <button id='resetar' onclick="resetarStorage()"><a href="">RESETAR</a></button>
 
                         </form>
                         
